[package]
name = "ec_gpu_bn254"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pairing = {package = "pairing_ce", version = "0.21.*" }
ec-gpu = "0.2"
ec-gpu-gen = "0.5.1"
blstrs = { version = "0.6.0", features = ["__private_bench", "gpu"] }
ark-ff = "0.3.0"
ark-std = "0.3.0"
ark-bn254 = "0.3.0"
rand = "0.8.5"
num-bigint = "0.4.3"
ark-ec = "0.3.0"

[features]
default = ["opencl"]
opencl = ["ec-gpu-gen/opencl"]
